# claude-howto-zh-cn

./: .pre-commit-config.yaml  AGENTS.md  CATALOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LEARNING-ROADMAP.md  QUICK_REFERENCE.md  README.backup.md  README.md  RELEASE_NOTES.md  SECURITY.md  STYLE_GUIDE.md  claude_concepts_guide.md  clean-code-rules.md  resources.md
.claude/skills/lesson-quiz/: README.md  SKILL.md
.claude/skills/self-assessment/: README.md  SKILL.md
.cursor/rules/: development-commands.mdc  git-conventions.mdc  project-context.mdc  project-conventions.mdc  translation-conventions.mdc
.github/: SECURITY_REPORTING.md  upstream-state.json
.github/scripts/: upstream_watch.py
.github/tests/: test_upstream_watch.py
.github/workflows/: upstream-watch.yml
01-slash-commands/: README.md  commit.md  doc-refactor.md  generate-api-docs.md  optimize.md  pr.md  push-all.md  setup-ci-cd.md  unit-test-expand.md
02-memory/: README.md  directory-api-CLAUDE.md  personal-CLAUDE.md  project-CLAUDE.md
03-skills/: .gitignore  README.md
03-skills/blog-draft/: SKILL.md
03-skills/blog-draft/templates/: draft-template.md  outline-template.md
03-skills/brand-voice/: SKILL.md  tone-examples.md
03-skills/brand-voice/templates/: email-template.txt  social-post-template.txt
03-skills/claude-md/: SKILL.md
03-skills/code-review/: SKILL.md
03-skills/code-review/scripts/: analyze-metrics.py  (+1 more)
03-skills/doc-generator/: SKILL.md  generate-docs.py
03-skills/refactor/: SKILL.md
04-subagents/: README.md  clean-code-reviewer.md  code-reviewer.md  data-scientist.md  debugger.md  documentation-writer.md  implementation-agent.md  secure-reviewer.md  test-engineer.md
05-mcp/: README.md
06-hooks/: README.md  context-tracker-tiktoken.py  context-tracker.py  format-code.sh  log-bash.sh  notify-team.sh  pre-commit.sh  security-scan.sh  validate-prompt.sh
07-plugins/: README.md
07-plugins/devops-automation/: README.md
07-plugins/documentation/: README.md
07-plugins/pr-review/: README.md
08-checkpoints/: README.md  checkpoint-examples.md
09-advanced-features/: README.md  config-examples.json  planning-mode-examples.md  setup-auto-mode-permissions.py
10-cli/: README.md
docs/: ROADMAP-20260401.md  TASKS-20260401.md
prompts/: remotion-video.md
resources/: DESIGN-SYSTEM.md  INDEX.txt  MANIFEST.txt  QUICK-START.md  README.md
scripts/: README.md  build_epub.py  check_cross_references.py  check_links.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/tests/: __init__.py  conftest.py  test_build_epub.py
(+40 files in other folders)
